# SBAI-2025-2287

./: .gitignore  CITATION.cff  README.md
Arduino/: .gitignore  README.md  platformio.ini
Arduino/src/: config.hpp  main.cpp  model.hpp  nn.hpp
Arduino/src/lib/: NN.hpp  PID.hpp  utils.hpp
LaTeX/: .gitignore
LaTeX/article/: ifacconf.bst  main.tex
LaTeX/article/content/: about-author.tex  conclusion.tex  introduction.tex  methodology.tex  results.tex
LaTeX/common/: bibliography.bib
LaTeX/common/content/: tank-equations.tex  tank-params.tex
LaTeX/common/figures/: generic-pinn.dia  generic-pinn.tex  neural-network.dia  neural-network.tex  pinn-diagram.dia  pinn-diagram.tex  pirnn-diagram.dia  pirnn-diagram.tex  rnn.tex
LaTeX/common/figures/hil-diagram/: loop.dia  loop.tex  normal.dia  normal.tex
LaTeX/paper/: main.tex
LaTeX/paper/content/: conclusion.tex  introduction.tex  methodology.tex  results.tex
LaTeX/slide/: main.tex  style.tex
LaTeX/slide/content/: arduino.tex  conclusion.tex  introduction.tex  pinn.tex  pirnn.tex
PyTorch/: README.md  pyproject.toml
PyTorch/benchmarks/: pinn.hkl  pirnn.hkl
PyTorch/models/: pinn.pt  pirnn.pt  pirnn_params.txt
PyTorch/results/: pirnn-benchmark.hkl  pirnn.onnx
PyTorch/src/: config.py  main.ipynb  pinn.ipynb  pirnn.ipynb
PyTorch/src/lib/: common_plots.py  export_params.py  models.py  physical_systems.py  predict.py  utils.py
TankSim/: README.md  pirnn-pi.csv  pirnn.csv  pyproject.toml
TankSim/src/: daemon.py  database.py  image-generator.py  main.py  simulator.py
TankSim/src/controllers/: CommonChart.py  FlowChart.py  LevelChart.py
TankSim/src/views/: FlowChart.qml  LevelChart.qml  Main.qml  Menu.qml
