[project]
name = "PIRNN-spherical-tanks"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "casadi>=3.6.6",
    "deepxde>=1.12.1",
    "drawarrow>=0.0.3",
    "hickle>=5.0.3",
    "ipykernel>=6.29.5",
    "kaleido>=0.2.1",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "notify-py>=0.3.43",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.17.0",
    "torch>=2.4.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]
constraint-dependencies = ["kaleido!=0.2.1.post1"]

[tool.ruff]
extend-exclude = ["wildson"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
