[project]
name = "TankSim"
version = "0.1.0"
authors = [ {name = "Silas Henrique", email = "silash35@gmail.com"}, ]
requires-python = "==3.13.2"

dependencies = [
    "casadi>=3.6.7",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyserial>=3.5",
    "PySide6>=6.8.2.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.5",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
